# LogosLinuxInstaller

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LogosLinuxInstaller.py  LogosLinuxInstaller.spec  README.md  alt_installer.py  app.py  cli.py  config.py  control.py  dependencies.md  gui.py  gui_app.py  installer.py  io.github.FaithlifeCommunity.OuDedetai.yml  logos.py  logos_on_linux.spec  logos_setup.py  main.py  msg.py  network.py  ou_dedetai.spec  pyproject.toml  requirements.txt  shell.nix  system.py  tui.py  tui_app.py  tui_curses.py  tui_dialog.py  tui_screen.py  updates.py  updates_gui.py  utils.py  wine.py
.github/workflows/: autobuild-main.yml  autobuilds.yaml  build-branch.yml  build-release.yaml  build-release.yml  build-test.yml  testbuilds.yml
logos_on_linux/: cli.py  control.py  gui.py  gui_app.py  installer.py  logos.py  main.py  msg.py  network.py  system.py  tui_app.py  tui_curses.py  tui_dialog.py  tui_screen.py  utils.py  wine.py
ou_dedetai/: app.py  cli.py  config.py  constants.py  control.py  gui.py  gui_app.py  installer.py  logos.py  main.py  msg.py  network.py  new_config.py  repair.py  system.py  tui_app.py  tui_curses.py  tui_dialog.py  tui_screen.py  utils.py  wine.py
ou_dedetai/assets/: LogosStubFailOK.mst
scripts/: build-binary.sh  check-coverage.sh  distro-info.sh  enforce-no-updates.py  ensure-python.sh  ensure-venv.sh  quick-install.sh  quick-run.sh  run-tests.sh  run_app.py  sample-config.json
snap/: run.sh  snapcraft.yaml
snap-data/: default-config.json
snap/etc/: oudedetai.json
snap/gui/: oudedetai.desktop  oudedetai.logos.desktop  oudedetai.verbum.desktop
test/: test_LLI.py  test_config.py  test_utils.py
test/data/: config.json
tests/: __init__.py  integration.py  manual-testing.md  test_LLI.py  test_config.py  test_fail.py.bak  test_installer.py  test_msg.py  test_tui.py  test_utils.py
tests/data/: config.conf
user/: dbs.py  login.py  resource_updates.py  utils.py
